--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <div id="successFlash" class="flash">✔ Checked In</div>
 
   <script>
-    const PRINTER_IP = "10.233.123.154";
+    const PRINTER_IP = "EPSONB0C88E.local";
     const PRINTER_PORT = 8008;
 
     const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxUDshq3VbkFVkBpFNMjfdGwdDVvoL20MfQS8uODw2dc_7UmgKnPce4n97nRVdKh8PL/exec";
